# EdgeComputingBIP

./: .gitignore
Appunti/: 01-Edge_Computing.md
Esercizi/Data_Visualization/: 01-Data_Visualization.R  01-Data_Visualization_basic.R  01-Data_Visualization_basic.qmd  02-r4ds-eda-exercises.qmd  03-data-storytelling.qmd
Esercizi/Edge Networks/: subscriber.c
Esercizi/Edge Networks/headers/: publisher.h  subscriber.h
Esercizi/Edge_Networks/: Makefile  publisher.c
Esercizi/Power_Aware_Computing/: CMakeLists.txt  TASK_QUESTIONS_ANSWERS.md
Esercizi/Power_Aware_Computing/cmake/: AddDmpExecutable.cmake
Esercizi/Power_Aware_Computing/designing-modern-processors.wiki/: Home.md  Power-aware-efficient-programming.md  energy-efficiency-lab.md
Esercizi/RISC-V_Workshop/: .gitignore  Makefile  README.md  linker.lds  rvtarget.h  tricycle.f
Esercizi/RISC-V_Workshop/asm_test/: main.S
Esercizi/RISC-V_Workshop/c_test/: main.c  start.S
Esercizi/RISC-V_Workshop/isa_test/: README.md  isa_test.py
Esercizi/RISC-V_Workshop/isa_test/macros/: riscv_test.h
Esercizi/RISC-V_Workshop/mul_bench/: main.c
Esercizi/RISC-V_Workshop/rtl/: basic_fifo.sv  reg_file.sv  tricycle.sv  tricycle_pkg.sv
Esercizi/RISC-V_Workshop/rtl/1_fetch/: fetch.sv
Esercizi/RISC-V_Workshop/rtl/2_decode/: decode.sv  decoder.sv
Esercizi/RISC-V_Workshop/rtl/3_execute/: branch.sv  execute.sv  int_alu.sv  int_div.sv  int_mul.sv  load_fix.sv
Esercizi/RISC-V_Workshop/testbench/: testbench.cpp  top.sv
Esercizi/Time_Series/: 05-1-discover-datasets.qmd
